attached_assets/Pasted-SyntaxError-Identifier-cheerio-has-already-been-declared-at-ModuleLoader-moduleStrategy-node-1747024612797.txt
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)
 
Node.js v18.20.5
file:///app/dist/production-http-only.js:5075
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)
 
Node.js v18.20.5
file:///app/dist/production-http-only.js:5075
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)
 
Node.js v18.20.5
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
^^^^^^^^^^^^^^^^^^^
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at async link (node:internal/modules/esm/module_job:67:21)
file:///app/dist/production-http-only.js:5075
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
 
Node.js v18.20.5
file:///app/dist/production-http-only.js:5075
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)
 
Node.js v18.20.5
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
 
Node.js v18.20.5
file:///app/dist/production-http-only.js:5075
import * as cheerio from 'cheerio';
^^^^^^^^^^^^^^^^^^^
 
SyntaxError: Identifier 'cheerio' has already been declared
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:152:18)
    at ModuleLoader.moduleProvider (node:internal/modules/esm/loader:299:14)
    at async link (node:internal/modules/esm/module_job:67:21)
 
Node.js v18.20.5
